<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MovieActivity" >
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/titleid"
        android:textStyle="bold" />
        
    <ImageView
        android:id="@+id/movie_imageView1"
        android:layout_width="128dip"
        android:layout_height="128dip"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/titleid"
        android:scaleType="fitCenter"
        android:src="@drawable/poster_not_found" />
    
    <TextView
        android:id="@+id/movie_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/movie_imageView1"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/yearid" />

    <TextView
        android:id="@+id/movie_mpaa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/movie_year"
        android:layout_alignBottom="@id/movie_year"
        android:layout_centerHorizontal="true"
        android:text="@string/mpaaid" />

    <TextView
        android:id="@+id/movie_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/movie_mpaa"
        android:layout_alignBottom="@id/movie_mpaa"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lengthid" />




    <TextView
        android:id="@+id/movie_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_mpaa"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/genreid" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="35dip"
        android:layout_height="35dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/exit"
        android:src="@drawable/back" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="45dip"
        android:layout_height="45dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/titleid"
        android:src="@drawable/globe" />

    <TextView
        android:id="@+id/textView_crit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_genres"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@id/movie_imageView1"
        android:text="@string/critics"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView_aud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/movie_year"
        android:layout_below="@id/movie_genres"
        android:layout_marginTop="3dp"
        android:text="@string/audience"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/movie_audScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView_aud"
        android:layout_below="@id/textView_aud"
        android:layout_marginTop="5dp"
        android:text="@string/audience" />

    <TextView
        android:id="@+id/movie_critScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView_crit"
        android:layout_below="@id/textView_crit"
        android:layout_marginTop="5dp"
        android:text="@string/critics" />
    

    <ImageView
        android:id="@+id/movie_imageView2"
        android:layout_width="30dip"
        android:layout_height="30dip"
        android:layout_alignBottom="@id/movie_audScore"
        android:layout_toRightOf="@id/movie_audScore"
        android:layout_marginLeft="3dp"
        android:contentDescription="@string/audience"
        android:src="@drawable/notranked" />

    <ImageView
        android:id="@+id/movie_imageView3"
        android:layout_width="30dip"
        android:layout_height="30dip"
        android:layout_alignBottom="@id/movie_critScore"
        android:layout_toRightOf="@id/movie_critScore"
        android:layout_marginLeft="3dp"
        android:contentDescription="@string/critics"
        android:src="@drawable/notranked" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="45dip"
        android:layout_height="45dip"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/imageButton2"
        android:contentDescription="@string/titleid" />


</RelativeLayout>